syntax = "proto3";

package grpcApi;

option go_package = "/grpcApi";

message ScheduleRequest { 
    string notification_id = 1;
    string deadline = 2;
}

message ScheduleResponse {
    int32 add_status = 1;
}

message NotificationInfoRequest {
    string notification_id = 1;
}

message NotificationInfoResponse {
    string notification_id = 1;
    string project_title = 2;
    string section_title = 3;
    string notification_title = 4;
    string description = 5;
    repeated string email = 6;
}

message UpdateNotificationStatusRequest {
    string notification_id = 1;
    int32 send_status = 2;
}

message UpdateNotificationStatusResponse {
    int32 send_status = 1;
}

message CancelNotificationRequest {
    string notification_id = 1;
}

message CancelNotificationResponse {
    int32 send_status = 1;
}

service MailingService {
    rpc ScheduleNotification (ScheduleRequest) returns (ScheduleResponse);
    rpc CancelNotification (CancelNotificationRequest) returns (CancelNotificationResponse);
}

service BackendService {
    rpc GetFullNotificationInfo (NotificationInfoRequest) returns (NotificationInfoResponse);
    rpc UpdateNotificationStatus (UpdateNotificationStatusRequest) returns (UpdateNotificationStatusResponse);
}